# barrios-skills

./: .gitignore  COLLECTION.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/workflows/: pages.yml
catalog/: skills.json
docs/: index.html  openecon-data-mcp.html  pipeline.html  sec-edgar-mcp.html  skills.html  wrds-mcp.html
docs/css/: site.css
docs/data/: skills.json
docs/drafts/: accounting-research-pipeline-framework.md
docs/js/: site.js
install/: claude.md  codex.md  cursor.md  external-mcps.md  openecon-data-mcp.md  sec-edgar-mcp.md  wrds-mcp.md
mcp/: README.md
mcp/wrds-mcp/: README.md  pyproject.toml
mcp/wrds-mcp/tunnel/: tunnel_daemon.py  tunnel_down.sh  tunnel_status.sh  tunnel_up.sh
mcp/wrds-mcp/wrds_mcp/: __init__.py  __main__.py  server.py
scripts/: audit-allowlist.txt  audit-secrets.sh  build-skill-zips.py  generate-site.sh  publish-github.sh  sanitize-skills.sh  sync-catalog-descriptions.py  sync-skills.py  sync-skills.sh
skills/data-and-visualization/dask/: SKILL.md
skills/data-and-visualization/econ-visualization/: SKILL.md
skills/data-and-visualization/geopandas/: SKILL.md
skills/data-and-visualization/matplotlib/: SKILL.md
skills/data-and-visualization/plotly/: SKILL.md
skills/data-and-visualization/polars/: SKILL.md
skills/data-and-visualization/pymc-bayesian-modeling/: SKILL.md
skills/data-and-visualization/scikit-learn/: SKILL.md
skills/data-and-visualization/seaborn/: SKILL.md
skills/data-and-visualization/statistical-analysis/: SKILL.md
skills/optional/: README.md
(+68 files in other folders)
